--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.1.1"
-org-jetbrains-kotlin-android = "1.9.0"
+org-jetbrains-kotlin-android = "1.9.22"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -44,8 +44,10 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger_version" }
 dagger-ksp-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger_version" }
 
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin-android" }
+
 #room
-room-runtime={group="androidx.room", name="room-runtime",version.ref="room_version"}
+room-runtime = { group="androidx.room", name="room-runtime",version.ref="room_version"}
 room-compiler={group="androidx.room", name="room-compiler",version.ref="room_version"}
 room-ksp-compiler={group="androidx.room", name="room-compiler",version.ref="room_version"}
 room-ktx={group="androidx.room", name="room-ktx",version.ref="room_version"} #optional - Kotlin Extensions and Coroutines support for Room
